operator/pkg/model/ingestion/testdata/gateway/http_extension_ref_cross_namespace_backend_reference_grant/input-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: ""
  listeners:
    - name: prod-web-gw
      port: 80
      protocol: HTTP
status: {}
