operator/pkg/model/ingestion/testdata/gateway/http_extension_ref_cross_namespace_backend_reference_grant/input-referencegrant.yaml
- apiVersion: gateway.networking.k8s.io/v1
  kind: ReferenceGrant
  metadata:
    name: allow-ext-proc
    namespace: ext-proc
  spec:
    from:
      - group: cilium.io
        kind: CiliumEnvoyExtProcFilter
        namespace: default
    to:
      - group: ""
        kind: Service
        name: ext-proc-service
