operator/pkg/model/ingestion/testdata/gateway/http_extension_ref_cross_namespace_backend_reference_grant/input-service.yaml
- metadata:
    creationTimestamp: null
    name: backend-service
    namespace: default
  spec: {}
  status:
    loadBalancer: {}
- metadata:
    creationTimestamp: null
    name: ext-proc-service
    namespace: ext-proc
  spec:
    ports:
      - port: 4317
  status:
    loadBalancer: {}
- metadata:
    creationTimestamp: null
    name: private-ext-proc-service
    namespace: private
  spec: {}
  status:
    loadBalancer: {}
